--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Rock-Paper-Scissors</title>
 </head>
 <body>
+    <h1>This game is played entirely through the console</h1>
+    <p id="score_display"></p>
     <script src="app.js"></script>
 </body>
 </html>
