--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This game is played entirely through the console</h1>
+    <h1>Janken Pon!</h1>
+    <div id="results">
     <p id="score_display"></p>
+    </div>
+    <div id="buttons">
+        <button type="button" class="button" id="rock">rock</button>
+        <button type="button" class="button" id="paper">paper</button>
+        <button type="button" class="button" id="scissors">scissors</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
